<resources>
    <string name="app_name">MyHealth</string>
    <string name="app">MY HEALTH</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_to">Welcome to</string>
    <string name="logo">Logo\n</string>
    <string name="hint_password_edit_text">Password</string>
    <string name="belum_mempunyai_akun">Didnt Have An Account?</string>
    <string name="daftar">Register</string>
    <string name="masukan_nama">Enter Username</string>
    <string name="masukan_email">Enter Email</string>
    <string name="sudah_mempunyai_akun">Already Have An Account?</string>
    <string name="masuk">SIGN IN</string>
    <string name="hint_username">Username</string>
    <string name="user">user</string>
    <string name="hint_username_edit_text">Username</string>
    <string name="Dont_have_account">Dont Have An Account?</string>
    <string name="profile">PROFILE</string>
    <string name="masukan_weight">Enter Weight</string>
    <string name="masukan_height">Enter Height</string>
    <string name="masukan_age">Enter Age</string>
    <string name="masukan_gender">Enter Gender</string>
    <string name="submit">Submit</string>
    <string name="logout">Sign Out</string>
    <string name="daily_calories">Daily \nCalories</string>
    <string name="_2500cal">2500cal</string>
    <string name="foods_recomendations">Foods Recomendations</string>
    <string name="activity_recomendations">Activity Recomendations</string>
    <string name="quotes">Quotes</string>
    <string name="hero">Albert Eisten</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="kalories">Kalories</string>
    <string name="_250cal">250cal</string>
    <string name="fat">Fat</string>
    <string name="_15gr">15gr</string>
    <string name="proteins">Proteins</string>
    <string name="_20gr">20gr</string>
    <string name="per_100gr_serving">per 100gr serving</string>
    <string name="food">Food</string>
    <string name="activity">Activity</string>
    <string name="per_30_minutes">Per 30 minutes</string>
    <string name="home">Home</string>
    <string name="profile2">Profile</string>
    <string name="male_female">Enter Gender \"male\" or \"female\"</string>


    <string-array name="food_name">
        <item>Sate</item>
        <item>Nasi Goreng</item>
        <item>Ayam Bakar</item>
        <item>Gado-Gado</item>
        <item>Rendang</item>
        <item>Soto Ayam</item>
        <item>Mie Goreng</item>
        <item>Capcay</item>
        <item>Nasi Uduk</item>
        <item>Semur Ayam</item>
    </string-array>

    <string-array name="food_kalori">
        <item>250cal</item>
        <item>400cal</item>
        <item>300cal</item>
        <item>150cal</item>
        <item>350cal</item>
        <item>200cal</item>
        <item>350cal</item>
        <item>180cal</item>
        <item>220cal</item>
        <item>280cal</item>
    </string-array>

    <string-array name="food_lemak">
        <item>25gr</item>
        <item>15gr</item>
        <item>20gr</item>
        <item>10gr</item>
        <item>30gr</item>
        <item>12gr</item>
        <item>18gr</item>
        <item>8gr</item>
        <item>10gr</item>
        <item>22gr</item>
    </string-array>

    <string-array name="food_protein">
        <item>15gr</item>
        <item>10gr</item>
        <item>18gr</item>
        <item>8gr</item>
        <item>20gr</item>
        <item>12gr</item>
        <item>15gr</item>
        <item>7gr</item>
        <item>9gr</item>
        <item>16gr</item>
    </string-array>

    <string-array name="image_foods">
        <item>https://upload.wikimedia.org/wikipedia/commons/a/ad/Sate_Ponorogo.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/1/15/Chaufa_salvaje_Selva_17042010.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/f/f5/Ayam_bakar_bumbu_rujak.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a2/Gado_gado.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/7/70/Rendang_daging_sapi_asli_Padang.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/0/05/Soto_ayam.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/f/f0/Mi_Goreng_GM.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/1/13/Cap_Cai.JPG</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a6/Nasi_uduk_netherlands.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/4/40/Semur_Daging_Kentang.JPG</item>
    </string-array>


    <string-array name="activity_name">
        <item>Push-up</item>
        <item>Jumping Jacks</item>
        <item>Walking</item>
        <item>Jogging</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>Yoga</item>
        <item>Jump Rope</item>
        <item>Stretching</item>
        <item>Dancing</item>
    </string-array>

    <string-array name="activity_kalori">
        <item>250cal</item>
        <item>500cal</item>
        <item>200cal</item>
        <item>400cal</item>
        <item>350cal</item>
        <item>600cal</item>
        <item>150cal</item>
        <item>700cal</item>
        <item>100cal</item>
        <item>300cal</item>
    </string-array>

    <string-array name="activity_img">
        <item>https://cdn0-production-images-kly.akamaized.net/9vq63HOTZL0nvCrpC8IuC-Ozvuk=/640x360/smart/filters:quality(75):strip_icc():format(webp)/kly-media-production/medias/2467658/original/072964900_1543234569-push_up.jpg</item>
        <item>https://o-cdn-cas.sirclocdn.com/parenting/images/2_GSuQzKF.width-800.format-webp.webp</item>
        <item>https://cdns.klimg.com/merdeka.com/i/w/news/2022/06/14/1443917/540x270/6-manfaat-brisk-walking-bagi-tubuh-bantu-jaga-kesehatan-fisik-dan-mental.jpg/item></item>
        <item>https://d1vbn70lmn1nqe.cloudfront.net/prod/wp-content/uploads/2023/01/26050335/Catat-Ini-Waktu-Terbaik-untuk-Olahraga-Jogging.jpg.webp</item>
        <item>https://hips.hearstapps.com/hmg-prod/images/road-bike-tips-0539-preview-64d24716ef87b.jpg</item>
        <item>https://www.health.com/thmb/Yv4HuoQyNbHNNxgtOTm63zqxurQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Health-Swimming-080c78802f384a4687df5a3b13d5611e-3719a8e40a3c4c43a63a4d795e47c505.jpg</item>
        <item>https://d1vbn70lmn1nqe.cloudfront.net/prod/wp-content/uploads/2021/06/29044522/Yoga.jpg.webp</item>
        <item>https://images.ctfassets.net/ipjoepkmtnha/3jARnoyec8OTNBoJXOVo7u/272850864b851ec4e5ba28eae6b52cb8/jump-rope-feature-fluid-motion.jpg</item>
        <item>https://foto.kontan.co.id/ZSuH7lUV97U1Y05S3r0yu_DjupM=/smart/filters:format(webp)/2023/01/06/828570691p.jpg</item>
        <item>https://dance-teacher.com/wp-content/uploads/2021/02/how-britt-stewart-became-the-first-black-female-pr.jpg</item>
    </string-array>

</resources>