<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        android:divider="@android:color/transparent"
        android:elevation="8dp"
        android:background="@drawable/rounded"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:background="@drawable/rounded">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgfood"
            android:layout_width="70dp"
            android:layout_height="88dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/circle"
            android:scaleType="fitCenter"
            android:maxWidth="70dp"
            android:maxHeight="85dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            tools:src="@drawable/baseline_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.542"
            app:shapeAppearanceOverlay="@drawable/rounded"
            android:clipToOutline="true"
            android:outlineProvider="background"/>

        <LinearLayout
            android:layout_width="77dp"
            android:layout_height="86dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgfood"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.558">

            <TextView
                android:id="@+id/namefood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/food"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kalories"
                    android:textColor="@color/black"
                    android:textSize="8dp"
                    tools:ignore="SpUsage,TextSizeCheck" />

                <TextView
                    android:id="@+id/kalori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:text="@string/_250cal"
                    android:textColor="@color/black"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@color/black"
                    android:textSize="8dp"
                    tools:ignore="SpUsage,TextSizeCheck" />

                <TextView
                    android:id="@+id/lemak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:text="@string/_15gr"
                    android:textColor="@color/black"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proteins"
                    android:textColor="@color/black"
                    android:textSize="8dp"
                    tools:ignore="SpUsage,TextSizeCheck" />

                <TextView
                    android:id="@+id/protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:text="@string/_20gr"
                    android:textColor="@color/black"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/per_100gr_serving"
                android:textColor="@color/abuabu3"
                android:textSize="5sp"
                tools:ignore="DuplicateIds,SmallSp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>