<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283"
            android:contentDescription="@string/logo" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.733"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_password_edit_text">
            <com.dicoding.myhealth.widget.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/field_password"
            app:layout_constraintStart_toStartOf="@id/field_password"
            app:layout_constraintEnd_toEndOf="@id/field_password"
            android:layout_marginTop="10dp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/have_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/belum_mempunyai_akun"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/register_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/have_account_label"
            app:layout_constraintStart_toEndOf="@id/have_account_label"
            android:text="@string/daftar"
            android:textColor="?attr/colorPrimary"
            android:layout_marginStart="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
