<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/patuaone"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/green"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/masukan_weight">

        <EditText
            android:id="@+id/ed_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/field_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/green"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/masukan_height">

        <EditText
            android:id="@+id/ed_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/field_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/green"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/masukan_age">

        <EditText
            android:id="@+id/ed_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/field_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="@color/green"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/masukan_gender">
        <EditText
            android:id="@+id/ed_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@id/field_gender"
        app:layout_constraintStart_toStartOf="@id/field_gender"
        app:layout_constraintTop_toBottomOf="@id/field_gender" />


    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_btn" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="452dp"
        android:fontFamily="@font/patuaone"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="411dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/menu" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="151dp"
        android:layout_height="116dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="477dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>